[project]
name = "RAG-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-postgres>=0.0.17",
    "openai>=2.24.0",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
]
